alignment fixed

--- a/index.css
+++ b/index.css
@@ -14,10 +14,11 @@ input{
     background-color: #353535;
     width: 70%;
     height: 60px;
-    
-    margin-top: 60px;
-
     border-radius: 10px;
+}
+
+.main{
+    padding: 80px 0px 80px 0px;
 }
 
 .header{
@@ -35,7 +36,7 @@ input{
 .sidebar{
     background-color: #353535;
     height: 700px;
-    margin: 60px 0px 80px 50px;
+    /* margin: 60px 0px 80px 50px; */
     border-radius: 30px;
 }
 
@@ -50,8 +51,8 @@ input{
 .card{
     background-color: #353535;
     height: 175px;
-    width: 270px;
-    margin: 80px 0px 80px 0px;
+    width: 250px;
+    /* margin: 80px 0px 80px 0px; */
     border-radius: 20px;
     
 
@@ -62,4 +63,9 @@ input{
     height: 230px;
     margin-top: 19mm;
     border-radius: 20px;
+}
+
+.cards{
+    padding-top: 100px;
+    padding-bottom: 16mm;
 }
